--- a/.github/workflows/code_review_with_openai_api.yml
+++ b/.github/workflows/code_review_with_openai_api.yml
@@ -7,36 +7,41 @@ on:
 jobs:
   code-review:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
+      - name: Get diff on Pull Request
+        id: get-diff-on-pull-request-
+        run: |
+          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          echo "DIFF_FILES<<$EOF" >> $GITHUB_ENV
+          git diff origin/${GITHUB_BASE_REF}..origin/${GITHUB_HEAD_REF} -- ':(exclude).github/*' >> $GITHUB_ENV
+          echo "$EOF" >> $GITHUB_ENV
+    
       - name: Install dependencies
         run: |
-          npm install -g @openai/cli
-
-      - name: Authenticate with OpenAI
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: |
-          openai api use $OPENAI_API_KEY
+          pip install openai
 
       - name: Generate code review
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         id: generate-review
         run: |
-          review=$(openai completions create \
-            --engine "text-davinci-002" \
-            --prompt "Please review this code: \n$(cat code.js)" \
-            --max-tokens 256 \
-            --n 1 \
-            --stop "\n\n" \
-            --temperature 0.7 \
-            --format text)
-          echo "::set-output name=review::$review"
+          REVIEW_EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          echo "REVIEW<<$REVIEW_EOF" >> $GITHUB_ENV
+          echo "$( openai -k $OPENAI_API_KEY api completions.create -m text-davinci-003 -p "Please summarize this change: \n ${{ env.DIFF_FILES }}\n" --max-tokens 256 --n 1 --stop "\n\n" --temperature 0.7)" >> $GITHUB_ENV
+          echo "$REVIEW_EOF" >> $GITHUB_ENV
 
       - name: Comment on pull request
-        uses: machine-learning-apps/pr-comment@v1
-        with:
-          message: ${{ steps.generate-review.outputs.review }}
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          URL: ${{ github.event.pull_request.html_url }}
+        run: 
+          gh pr comment -b "${{ env.REVIEW }}" "${{ env.URL }}"
+
